tests/ui/traits/test.stderr
error[E0404]: expected trait, found builtin type `isize`
  --> $DIR/test.rs:4:6
   |
LL | impl isize for usize { fn foo(&self) {} }
   |      ^^^^^ not a trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0404`.
